# django-plugin-django-debug-toolbar

./: .gitignore  README.md  justfile  pyproject.toml
.github/workflows/: test.yml
django_plugin_django_debug_toolbar/: __init__.py
tests/: test_django_plugin_django_debug_toolbar.py
tests/test_project/: settings.py  urls.py
